2007-01-07  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_progressbar_trough),
	(clearlooks_draw_progressbar_fill):
	- Follow the radius option when drawing the trough.
	- Cleaned up progressbar_fill

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Adjust the clip region by 3 pixel instead of one.

	* themes/Clearlooks/gtk-2.0/gtkrc:
	- Set the radius to 1.5 for the progress bar.

2007-01-05  Thomas Wood  <thos@gnome.org>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_menuitem):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_glossy_draw_menuitem):
	* themes/Clearlooks/gtk-2.0/gtkrc:

	Revert most of the changes from the last few commits. We can implement
	most of the new menuitem style using GtkMenu style properties (bug
	382634).

2007-01-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	Use draw_menubaritem as the fallback. Also use draw_menubaritem
	if the padding is larger than one pixel in the menu.

2007-01-04  Thomas Wood  <thos@gnome.org>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_menuitem): Fix a co-ordinate
	(clearlooks_register_style_classic): Add draw_menubaritem

2007-01-04  Thomas Wood  <thos@gnome.org>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box): Fix a compiler warning
	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_draw_button_gloss): Sharpen gloss colours

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_register_style_classic):
	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_glossy_draw_menuitem), (clearlooks_register_style_glossy):
	* engines/clearlooks/src/clearlooks_types.h:

	Add draw_menubaritem function


2007-01-03  Benjamin Berg  <benjamin@sipsolutions.net>
