@@ -18,7 +18,7 @@ libclearlooks_la_SOURCES =		\
 	./src/animation.h		\
 	./src/support.h			\
 	./src/clearlooks_draw.c		\
-	./src/clearlooks_style_glossy.c	\
+	./src/clearlooks_draw_glossy.c	\
 	./src/clearlooks_draw.h		\
 	./src/clearlooks_types.h	\
 	./src/config.h
